--- a/_posts/2023-12-17-2024-Post-Mortem.MD
+++ b/_posts/2023-12-17-2024-Post-Mortem.MD
@@ -25,7 +25,13 @@ We might want to imagine that we can still change things for 2024 ... NAH! There
 
 * **Climate change**: It's not JUST the concerns about the environment ... increasingly, it WILL BE the concerns about the stupid excesses of a hyperactive policy that was clumsily forced into place by the aggressive use of *active measures* that went beyond mere propaganda to being OUTRIGHT LIES AND SENTIMENT MANIPULATION to effect a massive economic distortion that created a manmade ecological catastrophe akin to the communist *great leaps forward* or a maoist *green cultural revolution* ... in other words, by 2028 it will be increasingly apparent that the whole *climate change* agenda had nothing at all to do with the climate, but instead was a massive power grab to centralize even more power, even more wealth in the hands of a VERY FEW multi-billionaires, ie people named Musk, Bezos, Gates, Buffett.  The MASSIVE centralization of greater wealth and greater power in the hands of fewer emporers does not change the fact that THE EMPEROR IS WEARING NO CLOTHES and eventually nobody will play along with the power/wealth centralization game. The bubble on billionaires and power centralizers inevitably has to crash. The man-made catastrophe of *climate change* OR the power centralization that has happened because of manufactured fears about a *climate change* hoax is VERY REAL. The emperor is wearing no clothes.
 
-* **Economic uncertainty**: <YAWN> What's new? Worries about economic uncertainty have been with us for thousands of years. It's not just the uncertainty now of course, but UNCERTAINTY about the uncertainess of uncertain uncertainties ... and not being able to afford uncertainty insurance for things like the medical billing financial problems caused by diseases and worries of diseases caused by affluenza. It's ALWAYS going to be the economy, stupid ... people are ALWAYS going to be wondering why they can't get ahead or keep up with the affluent billionaire sports superstar or singer-songwriter megastar they went to school with ... when people can SEE a megastar performing in front of them in ultra-high-definition with better-than-real-life sound and video, they inevitably begin to imagine that they can have jets, maids, mega-yachts and mansions on the beach ALSO. The CURSE of affluence is the perpetual PATHETIC neediness of people whose lifes are based on imitating celebrities, or AT MINIMUM, buying an iPhone 15 Pro Max so they can prove to people around them that their life is as successful as any other star in their gated community. The SOLUTION to this is work with the proficient toolbuilders who know they have to [eat their own dog food](https://en.wikipedia.org/wiki/Eating_your_own_dog_food) ... but otherwise, LET THE DEAD BURY THEIR DEAD ... when people have traded in their souls for the ***appearance*** of status or wealth or celebrity, they are already basically dead ... so LET THOSE WHO HAVE CHOSEN TO TRADE THEIR SOULS FOR DEATH BURY THEIR DEAD ... instead, build campaigns that attact the builders who realize that developing, building and putting in the hard, grunt work of figuring out the impossible stuff is the only way to network with people who are builders who realize that developing, building and putting in the hard, grunt work of figuring out the impossible stuff. In other words, LISTEN to what the builders try to explain, ie "PRACTICE LIKE YOU PLAY" or, build your toolkits to build your own toolkits, [eat your own dog food](https://en.wikipedia.org/wiki/Eating_your_own_dog_food) But when it comes to the worriers and followers of celebrity and status: LET THE DEAD BURY THEIR DEAD 
+* **Economic uncertainty**: <YAWN> What's new? Worries about economic uncertainty have been with us for thousands of years. It's not just the uncertainty now of course, but UNCERTAINTY about the uncertainess of uncertain uncertainties ... and not being able to afford uncertainty insurance for things like the medical billing financial problems caused by diseases and worries of diseases caused by affluenza. It's ALWAYS going to be the economy, stupid ... people are ALWAYS going to be wondering why they can't get ahead or keep up with the affluent billionaire sports superstar or singer-songwriter megastar they went to school with ... when people can SEE a megastar performing in front of them in ultra-high-definition with better-than-real-life sound and video, they inevitably begin to imagine that they can have jets, maids, mega-yachts and mansions on the beach ALSO. The CURSE of affluence is the perpetual PATHETIC neediness of people whose lifes are based on imitating celebrities, or AT MINIMUM, buying an iPhone 15 Pro Max so they can prove to people around them that their life is as successful as any other star in their gated community. 
+
+The SOLUTION to this tendency to be excessively concerned with wealth or status is just work ONLY with the proficient toolbuilders who do not need wealth or status ... because they know they just have to [eat their own dog food](https://en.wikipedia.org/wiki/Eating_your_own_dog_food).
+
+Otherwise, there's no fix for the worriers ... LET THE DEAD BURY THEIR DEAD ... when people have traded in their souls for the ***appearance*** of status or wealth or celebrity, they are already basically dead ... they have CHOSEN death ... so LET THOSE WHO HAVE CHOSEN TO TRADE THEIR SOULS FOR DEATH BURY THEIR DEAD.
+
+We cannot fix people who have chosen to worry ... so we must build campaigns that attact the builders who realize that developing, building and putting in the hard, grunt work of figuring out the impossible stuff is the only way to network with people who are builders who realize that developing, building and putting in the hard, grunt work of figuring out the impossible stuff. In other words, LISTEN to what the builders try to explain, ie "PRACTICE LIKE YOU PLAY" or, build your toolkits to build your own toolkits, [eat your own dog food](https://en.wikipedia.org/wiki/Eating_your_own_dog_food) But when it comes to the worriers and followers of celebrity and status: LET THE DEAD BURY THEIR DEAD 
 
 ### Tactics and Strategy Analysis:
 
