Update messaging section in post-mortem document

--- a/_posts/2023-12-17-2024-Post-Mortem.MD
+++ b/_posts/2023-12-17-2024-Post-Mortem.MD
@@ -37,11 +37,13 @@ We might want to imagine that we can still change things for 2024 ... NAH! There
 
 ***MESSAGING really matters! It's pretty much EVERYTHING about how gregarious animals like humans reason together in tribes and even larger groups and economies.***. People who grew up using smartphones before they can talk approach the world differently than kids who grew up watching StarWars and playing video games ... who grew up differently than kids who grew up trying to tune their AM radio to get WLS from Chicago or monkeying with the rabbit ears on the teevee to see some semblance of something like a picture ... who grew up differently than kids who grew up reading the comics in their parents newspaper or going to the library or trying to sneak into movie matinee.  
 
-The BRAINS of different age groups and different cultures are wired diffently.
+**The BRAINS of different age groups and different cultures are wired diffently.** It is ESSENTIAL that we understand how large these cognitive differences are ... it's just like how we don't reason like cats or gorillas or elephants ... it's the same as with our ancestors.
 
 We might LOOK similar ... but there's more difference in reasoning ability nowadays between generations than their once was in populutions that were hundreds of thousands of years apart.  Humans ADAPT, ***but only to a degree, AFTER THEY REACH A CERTAIN AGE*** ... it's all because their brains get wired differently in their developmental years ... so it is the MESSAGING and the data and the tools for using data that go into the different methods of gathering intelligence or finding things that others in your generation will find similarly entertaining matter for how we make decisions and form our priorities. 
 
-So, yeah ... duh ... MESSAGING matters! It's pretty much EVERYTHING ... for the same reason that your distant ancestors brains were hardwired to fight sabre-toothed tigers, but would suck even more than you do at playing games on a smartphone.  MESSAGING matters immensely when different demographic segments have developed under such different cognitive environments.
+So, yeah ... duh ... MESSAGING matters! It's pretty much EVERYTHING ... for the same reason that your distant ancestors brains were hardwired to work with other members of their tribe to fight sabre-toothed tigers or to obtain food in large supplies from woolly mammoths but, as smart as they were about that kind of stuff, those ancestors would suck even more than you do when it comes to playing games on a smartphone and could not do it if their lives depended upon it.  
+
+**MESSAGING or information processing matters immensely when different demographic segments have developed under such different cognitive environments.** Messaging is EVERYTHING.
 
 #### Potentially Effective:
 
