NO CHANGE, just revising/emphasizing why we should look back

--- a/_posts/2023-12-17-2024-Post-Mortem.MD
+++ b/_posts/2023-12-17-2024-Post-Mortem.MD
@@ -9,11 +9,17 @@ categories: Discipline
 
 [*Turn out the lights, the party's over ...*](https://www.youtube.com/watch?v=saMUmG4HU1E&t=158s)
 
-I think we can all agree that the 2024 campaign is in the books already, but ***it's NONE TOO EARLY to start thinking about the 2028 race ... or the 2032 race.***
+If we're honest with ourselves, we can all agree that the 2024 campaign is in the books already, but ***it's NONE TOO EARLY to start thinking about what should be done different for the 2028 race ... or how we should lay the groundwork for the 2032 race.***
+
+The big lesson is that we really need to knock off the senile, geriatric thinking that is so richly embodied by Biden and Trump. It's time to drive looking forward ... rather than STARING into the rear view mirror. 
+
+In other words, the sickening obvious, inescapable FACT of the matter is that political campaigns still seem to be run in the same backward way that countries prepare to fight the last war. War, like politics, is a really terrible game to get into, because most countries LOSE and lose in such a profoundly abysmal fashion, that one would think that humans would just decide not to the war thing anymore. As we know from Clausewitz and others, the same lessons that apply to war also apply to politics, or vice versa ... but human beings cannot resist and are probably hardwired for the POINTLESS bullshit of politicking and warfighting. 
+
+**THERE'S WAY TOO MUCH AT STAKE** ... *so in we like peace, we must prepare for being ready to fight wars. We're screwed ... we cannot get out of the game of politics ... so we must prepare for the NEXT campaign, the NEXT election, the NEXT war ... we must NOT waste any time preparing for the last one* ... if we want to defend ourselves from the politickers and warmongers, we must LOOK FORWARD, not backward ... we must win the NEXT campaign ... because the LAST one, ie the one coming up in 2024, is already a done deal, already in the books.
 
 # Civics lesson: Key Dates in how the Electoral Collage functions
 
-One year from today ... AFTER the public has voted in early November, **on December 17, 2024, the Electoral College meets** in each State and across the nation, 538 Electors record their votes ... the election uncertainty is basically over at that point ... on January 6, 2025, Congress meets in joint session and formally counts those electoral votes and there's NO WAY POSSIBLE that the votes have changed since December 17th.
+In case you've forgotten your elementary OR junior high OR high school civics lessons, we all should know that one year from today [this was produced on December 17th, 2023] ... AFTER the public has voted in early November, **on December 17, 2024, the Electoral College meets** in each State and across the nation, 538 Electors record their votes ... the election uncertainty is basically over at that point ... on January 6, 2025, Congress meets in joint session and formally counts those electoral votes and there's NO WAY POSSIBLE that the votes have changed since December 17th.
 
 We might want to imagine that we can still change things for 2024 ... NAH! There's still a lot that will change before the election, but practically speaking, as far as what any of us can do now about the 2024 election -- forget about it, IT'S ALREADY BASICALLY IN THE BOOKS ... now, it's a matter of what we SHOULD HAVE DONE maybe three years ago ... it is basically already way, way too late for any citizen, including very, very powerful citizens, to do anything other in 2024 than just follow through, participate in the caucuses or primaries, maybe attend the national convention and then vote *early* and help get out the vote so that all elgible voters exercise their legal right to vote ... but othersise, THE 2024 CAMPAIGN IS ALREADY BASICALLY IN THE BOOKS. It's time for the post-mortem politico pathologist's autopsy and failure analysis of the 2024 campaign, in order to start preparing for 2028. 
 
