--- a/_posts/2024-01-12-eGPUs.MD
+++ b/_posts/2024-01-12-eGPUs.MD
@@ -7,9 +7,22 @@ categories: Tools
 ---
 
 
-eGPU technology is really about dabbling GPU/TPU Virtualization enough to be able to make semi-informed decisions about building out your own AI strategy. You don't need to be the world's top expert in eGPU technology ... in fact, nobody can really stay ahead of this rapidly expanding curve ... but this is about knowing just enough to be able to make semi-informed decisions about how people building out their AI strategy ... in other words, instead of SQUANDERING money on vehicles and just mindlessly driving around, you really need to be able to drive your*self* around in the virtual realm ... because every $1000 worth of investment in rentable compute informed by your own eGPU technology will take you further than $1,000,000 worth of investment in automotive technology, that includes engine-powered technology, like farm equipment, earthmoving equipment or big trucks, or anything that still depends on an internal combustion engine or and electric motor that replaces that engine.
+***Using eGPUs in order to exploit the realm of rentable compute is about getting around better in the information realm ... relying on people whose lame-thinking mindsets are still stuck in automotive culture, which is using vehicles or even airplanes, is just too damned slow, inefficient and geographically-constrained ... it's not just that information travels at the speed of light; it's also that thought and human consciousnesss is increasingly global, ie somebody else in the world already has far better ideas than you can hope to have.*** *In other words, the UNIVERSE of information is about HUMILITY and ditching the ignorance of thinking that everything has to be invented here.*
 
-## Hardware 
+The whole point of [using desktop GPUs technology as a machine learning or personal AI sandbox](https://rocm.docs.amd.com/projects/radeon/en/latest/index.html) is primarily about the extensibility of open source software which allows people to THINK more collaboratively, to learn, try things and develop the necessary code that affords them the freedom to customize and tailor their technology for their own needs ... while thinking more creatively and collaborating with a very large community of other developers, and helping each other find solutions in an agile, flexible, rapid and secure manner ... and you can bet your ass it's a helluva lot more competitive than just thinking about your own stuff ... the point of rentable compute and the realm of truly open AI is to LEARN with a minimal sandbox environment in order to be able to understand the fundamentals well exploit to the different options available in the realm of rentable compute.  
+
+Obviously, the multi-bajillion pound gorilla in this space is the [Nvidia developer network](https://developer.nvidia.com/) but the amount of wealth that is at stake means that there is scramble to develop solid competing alternatives ... and *more competition is a lot better than less competition* so it pays to understand the level of competition, ie to understand more than just the realm of Nvidia.  AMDs [Radeon Open Compute (ROCm)](https://en.wikipedia.org/wiki/GPUOpen#Radeon_Open_Compute_(ROCm) collection includes drivers, development tools, and APIs that enable GPU programming from low-level kernel to end-user applications which are powered by AMD’s [Heterogeneous-computing Interface for Portability (HIP)](https://rocm.docs.amd.com/projects/HIP/en/latest/index.html) open-source software C++ GPU programming environment and its corresponding runtime. [ROCm was originally developed as AMD's Boltzmann Initiative and then finally productized in 2016](https://www.anandtech.com/show/9792/amd-sc15-boltzmann-initiative-announced-c-and-cuda-compilers-for-amd-gpus) to provide an alternative to Nvidia's CUDA which includes a tool to port CUDA source-code to portable (HIP) source-code which can be compiled on **both** [AMD's Heterogeneous Compute Compiler (HCC)](https://github.com/ROCm/hcc/wiki) and [Nvidia CUDA Compiler (NVCC)](https://docs.nvidia.com/cuda/cuda-compiler-driver-nvcc/#introduction). 
+
+The whole point of *even attempting* to develop, test and deploy GPU accelerated HPC, AI, scientific computing, CAD, and other applications in a free, open-source, integrated and secure software ecosystem is to try to *LEARN the hard way* or to have a hands-on understanding of how AI is actually being done.
+
+You won't become the world's top expert in eGPU technology ... the fact of the matter is, almost nobody can really stay ahead of this rapidly expanding curve of knowledge development ... but this is about knowing just enough to be able to make semi-informed decisions about the CULTURE being made possible by AI and how shrewd, hardcore businesses are building out their AI strategy and what that will mean for culture.
+
+In other words, instead of SQUANDERING money on vehicles and just mindlessly driving around, you really need to be able to start understanding how get your*self* around computationally in the accelerated *AI-ified* information realm ... because every $1000 worth of investment in rentable compute in 2025 informed by your own eGPU technology will take you much, much, much further than $1,000,000 worth of investment in automotive technology, that includes engine-powered technology, like farm equipment, earthmoving equipment or big trucks, or anything that still depends on an internal combustion engine or and electric motor that replaces that engine. 
+
+
+## Your hardware strategy for your little eGPU learning sandbox 
+
+***Oculink 2, PICe 6.0, NVLink, CXL, Terahertz, GPU/TPU Virtualization and MUCH, MUCH, MUCH More!***
 
 While [Oculink 2](https://www.howtogeek.com/what-is-oculink/) is well known to followers of things like the [eGPU forum](https://egpu.io/) and has established itself as the current champion for connecting external GPUs (eGPUs) to rackmount servers, the future holds some exciting possibilities for even faster and more efficient connections. 
 
