--- a/_posts/2024-01-12-eGPUs.MD
+++ b/_posts/2024-01-12-eGPUs.MD
@@ -11,7 +11,9 @@ categories: Tools
 
 The whole point of [using desktop GPUs technology as a machine learning or personal AI sandbox](https://rocm.docs.amd.com/projects/radeon/en/latest/index.html) is primarily about the extensibility of open source software which allows people to THINK more collaboratively, to learn, try things and develop the necessary code that affords them the freedom to customize and tailor their technology for their own needs ... while thinking more creatively and collaborating with a very large community of other developers, and helping each other find solutions in an agile, flexible, rapid and secure manner ... and you can bet your ass it's a helluva lot more competitive than just thinking about your own stuff ... the point of rentable compute and the realm of truly open AI is to LEARN with a minimal sandbox environment in order to be able to understand the fundamentals well exploit to the different options available in the realm of rentable compute.  
 
-Obviously, the multi-bajillion pound gorilla in this space is the [Nvidia developer network](https://developer.nvidia.com/) but the amount of wealth that is at stake means that there is scramble to develop solid competing alternatives ... and *more competition is a lot better than less competition* so it pays to understand the level of competition, ie to understand more than just the realm of Nvidia.  AMDs [Radeon Open Compute (ROCm)](https://en.wikipedia.org/wiki/GPUOpen#Radeon_Open_Compute_(ROCm) collection includes drivers, development tools, and APIs that enable GPU programming from low-level kernel to end-user applications which are powered by AMD’s [Heterogeneous-computing Interface for Portability (HIP)](https://rocm.docs.amd.com/projects/HIP/en/latest/index.html) open-source software C++ GPU programming environment and its corresponding runtime. [ROCm was originally developed as AMD's Boltzmann Initiative and then finally productized in 2016](https://www.anandtech.com/show/9792/amd-sc15-boltzmann-initiative-announced-c-and-cuda-compilers-for-amd-gpus) to provide an alternative to Nvidia's CUDA which includes a tool to port CUDA source-code to portable (HIP) source-code which can be compiled on **both** [AMD's Heterogeneous Compute Compiler (HCC)](https://github.com/ROCm/hcc/wiki) and [Nvidia CUDA Compiler (NVCC)](https://docs.nvidia.com/cuda/cuda-compiler-driver-nvcc/#introduction). 
+Obviously, the multi-bajillion pound gorilla in this space is the [Nvidia developer network](https://developer.nvidia.com/) and although it's a good idea to ***virtually*** *attend* or be aware of things like [Nvidia's GTC](https://register.nvidia.com/flow/nvidia/gtcs24/attendeeportaldigital/page/sessioncatalog) ... the amount of wealth that is at stake means that there is scramble to develop solid competing alternatives ... and *more competition is way, way, way better than less competition* so it pays to understand the level of competition, ie to understand more than just the realm of Nvidia. Plenty of people [in addition to the trillion dollar monster NVidia itself] will make an excellent case for being proficient in understanding Nvidia's offerings ... so we'll let them do that ... and we have no argument against that ... but IN THIS POST we're going to focus on the other players in this space, ie AMD, Intel, and others, because ... ***competition is good***.   
+
+AMDs [Radeon Open Compute (ROCm)](https://en.wikipedia.org/wiki/GPUOpen#Radeon_Open_Compute_(ROCm) collection includes drivers, development tools, and APIs that enable GPU programming from low-level kernel to end-user applications which are powered by AMD’s [Heterogeneous-computing Interface for Portability (HIP)](https://rocm.docs.amd.com/projects/HIP/en/latest/index.html) open-source software C++ GPU programming environment and its corresponding runtime. [ROCm was originally developed as AMD's Boltzmann Initiative and then finally productized in 2016](https://www.anandtech.com/show/9792/amd-sc15-boltzmann-initiative-announced-c-and-cuda-compilers-for-amd-gpus) to provide an alternative to Nvidia's CUDA which includes a tool to port CUDA source-code to portable (HIP) source-code which can be compiled on **both** [AMD's Heterogeneous Compute Compiler (HCC)](https://github.com/ROCm/hcc/wiki) and [Nvidia CUDA Compiler (NVCC)](https://docs.nvidia.com/cuda/cuda-compiler-driver-nvcc/#introduction). 
 
 The whole point of *even attempting* to develop, test and deploy GPU accelerated HPC, AI, scientific computing, CAD, and other applications in a free, open-source, integrated and secure software ecosystem is to try to *LEARN the hard way* or to have a hands-on understanding of how AI is actually being done.
 
