--- a/_posts/2024-01-12-eGPUs.MD
+++ b/_posts/2024-01-12-eGPUs.MD
@@ -1,11 +1,19 @@
 ---
 layout: post
-title:  "eGPU Technology For Exploring Your AI UNIVERSE"
+title:  "eGPUs For Exploration Of The Limits Of Your Noosphere"
 subtitle:  "Oculink 2, PICe 6.0, NVLink, CXL, Terahertz, GPU/TPU Virtualization and MUCH, MUCH, MUCH More!"
 date:   2024-01-12 4:30:00
 categories: Tools
 ---
 
+
+# How far can you THINK?
+
+The UNIVERSE was created for you to explore. Why would you allow your thoughts to be constrained by what you can see from your vehicle? It's not just the far reaches of outer space, there's also plenty of room at the bottom ... perhaps you are interested in [exploring the nanoscale biological processes by advancing the limits of optical microscopy](https://forum.level1techs.com/t/minisforum-ar900i-mobo-with-i9-13900hx-with-gpu-assisted-global-shutter-gs-camera-sensor-rapid-motion-microscopy-machine-vision/205232)? We might ask, for example, ["Are there little AFFORDABLE-FOR-THE-MASSES microscopy projects, for cellular and molecular-level digital optical microscopy, in case families want to *share videos of their gut bacteria or new virus friends before/after the holidays on Instagram*"](https://bard.google.com/share/66ef676e6599) ... maybe that would lead to setting up a mini PC for a bit of an industrial machine vision application ... in which a [global shutter camera sensor]([an Arducam 2.3MP AR0234 Color Global Shutter](https://www.uctronics.com/arducam-2-3mp-ar0234-color-global-shutter-camera-usb2-0-evaluation-kit.html) is mounted in a modified [structured light](https://en.wikipedia.org/wiki/Structured_light) [epifluorescent microscope](https://en.wikipedia.org/wiki/Fluorescence_microscope) ... the objective would be achieving something like [super resolution computational saturated absorption microscopy](https://www.connectedpapers.com/main/b303b60d3e8a863558a0e1a9b8dbe990aeb57291/Super%20resolution-computational-saturated-absorption-microscopy./graph) or maybe GPU-assisted [total internal reflection fluorescence (TIRF) microscopy](https://arxiv.org/abs/2311.00590).
+
+***How FAR down, up, sideways, backward, forward can you THINK?
+
+*You just can't think that far in a vehicle ... or a plane ... or even riding around the Universe or going to Mars in a spaceship.*  If you really want to think very far, you are going to need to begin to master computational technology ... *PART of that is about eGPUs and rentable compute ...* ... PART of it ...
 
 ***Using eGPUs in order to exploit the realm of rentable compute is about getting around better in the information realm ... relying on people whose lame-thinking mindsets are still stuck in automotive culture, which is using vehicles or even airplanes, is just too damned slow, inefficient and geographically-constrained ... it's not just that information travels at the speed of light; it's also that thought and human consciousnesss is increasingly global, ie somebody else in the world already has far better ideas than you can hope to have.*** *In other words, the UNIVERSE of information is about HUMILITY and ditching the ignorance of thinking that everything has to be invented here.*
 
