--- a/FOSS/3.md
+++ b/FOSS/3.md
@@ -3,3 +3,16 @@ layout: page
 title: 3)
 permalink: /FOSS/3/
 ---
+
+#### 3. Health and Wellness (Points 21-30)
+
+21. Establish community gardens in vacant lots or public spaces for fresh produce access.
+22. Organize weekly farmers' markets to promote local agriculture and healthy eating.
+23. Offer cooking classes and nutrition workshops with local chefs or dietitians.
+24. Set up walking or biking trails to encourage physical activity.
+25. Partner with healthcare providers for free health screenings and preventive care clinics.
+26. Organize community sports leagues for all ages (e.g., soccer, basketball, pickleball).
+27. Offer mental health support groups and resources.
+28. Set up an annual community health fair with wellness activities and education.
+29. Promote healthy eating through school lunch programs and community meals.
+30. Create walking clubs for seniors to boost fitness and socialization.
