--- a/FOSS/9.md
+++ b/FOSS/9.md
@@ -3,3 +3,16 @@ layout: page
 title: 9)
 permalink: /FOSS/9/
 ---
+
+#### 9. Safety and Security (Points 81-90)
+
+81. Strengthen community policing to build trust and collaboration.
+82. Organize neighborhood watch programs to enhance safety.
+83. Implement disaster preparedness plans with regular drills.
+84. Promote fire safety education with workshops and inspections.
+85. Offer self-defense classes for residents of all ages.
+86. Organize safety workshops on topics like cybersecurity and fraud prevention.
+87. Set up a community emergency response team (CERT) for disasters.
+88. Promote cybersecurity awareness with educational campaigns.
+89. Create a neighborhood safety app for reporting issues and alerts.
+90. Host first aid and CPR training for residents.
