--- a/_posts/2025-03-28-SWOT.MD
+++ b/_posts/2025-03-28-SWOT.MD
@@ -7,7 +7,7 @@ categories: Compassion
 
 ## Strengths-Weaknesses-Opportunities-Threats Analysis for Rock Rapids, Iowa
 
-Maybe TL;DR ... *I don't want to spoil ***the movie version of this book***, *but let's just say that am not too worried about some of the* ***Weaknesses***, *but there are definitely some interesting [strategic considerations that emerge from this SWOT analysis].(#top-ten-strategic-considerations-for-rock-rapids-iowa).*
+Maybe TL;DR ... *I don't want to spoil ***the movie version of this book***, *but let's just say that am not too worried about some of the* ***Weaknesses***, *but there are definitely some interesting [strategic considerations that emerge from this SWOT analysis](#top-ten-strategic-considerations-for-rock-rapids-iowa).*
 
 
 
